# misc

./: .env.template  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
aws/: docker-compose.yml
aws/terraform/: provider.tf  s3.tf
db/migrations/: 20210605114609_init.sql
ent/: README.md  docker-compose.yml  go.mod  go.sum  gqlgen.yml  server.go
ent/cmd/: main.go
ent/cmd/api-gql/: main.go
ent/cmd/entc/: main.go
ent/cmd/migration/: main.go
ent/db/migrations/: 20220310124847_create_users.sql
ent/ent/: client.go  ent.go  entc.go  gql_node.go  gql_pagination.go  gql_where_input.go  mutation.go  mutation_input.go  runtime.go  todo.go  todo_create.go  todo_delete.go  todo_query.go  todo_update.go
ent/ent/enttest/: enttest.go
ent/ent/hook/: hook.go
ent/ent/migrate/: schema.go
ent/ent/runtime/: runtime.go
ent/ent/schema/: group.go  todo.go  user.go
ent/ent/todo/: todo.go  where.go
ent/graph/: resolver.go  schema.graphqls  schema.resolvers.go
ent/migrations/: 1646834122.down.sql  1646834122.up.sql  1646835245.down.sql  1646835245.up.sql  20220703094903_changes.up.sql  20220703120801_changes.down.sql  20220703120801_changes.up.sql
postgre/: README.md
postgre/src/: routes.rs
postgre/src/repository/: data_source.rs
presto/: README.md  docker-compose.yml
schema/posgre/: dev_create_database.sql
src/: error.rs  lib.rs  main.rs
src/handler/: data_source.rs
src/repository/: mod.rs
src/service/: data_source.rs
trino/: .env.template  README.md  docker-compose.yml
trino/.docker/: my.cnf
(+6 files in other folders)
